tdf#122997 Canceling Paragraph dialog causes crash

regression from
    commit bf359d01ac8b1e0292e8a92c38e58c03e6c17d8b
    add a Dialog::runAsync for the non-controller case

Change-Id: I02e3f62b8304139003af1c137ea59750afb4be4c
Reviewed-on: https://gerrit.libreoffice.org/66988
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>